--- a/index.html
+++ b/index.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Test task</title>
-
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/styles/index.css" />
+    <title>Test task</title>
+  </head>
+  <body>
+    <header>
+      <nav class="flex align-center">
+        <button class="menu-item" id="hamburger-btn">
+          <span class="icon-menu11"></span>
+        </button>
+        <div class="hamburger-menu">
+          <a href="#" class="menu-item">
+            <span class="icon-dashboard2 menu-item-icon"></span>
+            <span class="menu-item-text">Filter</span>
+          </a>
+          <a href="#" class="menu-item">
+            <span class="icon-credit-card4 menu-item-icon"></span>
+            <span class="menu-item-text">Portfolios</span>
+          </a>
+          <a href="#" class="menu-item">
+            <span class="icon-group2 menu-item-icon"></span>
+            <span class="menu-item-text">Explicit Rights</span>
+          </a>
+        </div>
+        <div class="flex">
+          <div>
+            <span>Test Task - Menu</span>
+            <span class="icon"></span>
+            <span>Dashboard</span>
+          </div>
+          <input class="search" type="text" />
+        </div>
+      </nav>
+    </header>
+  </body>
 </html>
