Added styles for header elements

--- a/index.html
+++ b/index.html
@@ -10,30 +10,34 @@
   <body>
     <header>
       <nav class="flex align-center">
-        <button class="menu-item" id="hamburger-btn">
+        <button class="hamburger-menu-item" id="hamburger-btn">
           <span class="icon-menu11"></span>
         </button>
         <div class="hamburger-menu">
-          <a href="#" class="menu-item">
+          <a href="#" class="hamburger-menu-item">
             <span class="icon-dashboard2 menu-item-icon"></span>
             <span class="menu-item-text">Filter</span>
           </a>
-          <a href="#" class="menu-item">
+          <a href="#" class="hamburger-menu-item">
             <span class="icon-credit-card4 menu-item-icon"></span>
             <span class="menu-item-text">Portfolios</span>
           </a>
-          <a href="#" class="menu-item">
+          <a href="#" class="hamburger-menu-item">
             <span class="icon-group2 menu-item-icon"></span>
             <span class="menu-item-text">Explicit Rights</span>
           </a>
         </div>
         <div class="flex">
-          <div>
-            <span>Test Task - Menu</span>
-            <span class="icon"></span>
-            <span>Dashboard</span>
+          <div class="menu-text">
+            <span class="menu-text-main">Test Task - Menu</span>
+            <span class="icon-keyboard-arrow-right"></span>
+            <span class="menu-text-secondary">Dashboard</span>
           </div>
-          <input class="search" type="text" />
+          <div class="menu-search">
+            <input type="text" placeholder="Search..." />
+            <span class="icon-search8"></span>
+            <span class="icon-arrow-drop-down"></span>
+          </div>
         </div>
       </nav>
     </header>
