Fix: Added arrow-icon on menu-hover, changed breadcrumbs tags

--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
             <span class="menu-item-text">Explicit Rights</span>
           </a>
         </div>
+        <button class="pseudo-hamburger-menu-item">
+          <span class="icon-arrow-back"></span>
+        </button>
         <div class="flex">
           <div class="menu-text">
-            <span class="menu-text-main">Test Task - Menu</span>
+            <a href="#" class="menu-text-main">Test Task - Menu</a>
             <span class="icon-keyboard-arrow-right"></span>
-            <span class="menu-text-secondary">Dashboard</span>
+            <a href="#" class="menu-text-secondary">Dashboard</a>
           </div>
           <div class="menu-search">
             <input type="text" placeholder="Search..." />
